syntax = "proto3";

package outer.profile;

option go_package = "go-device-controller/types/protocol/generated/proto/outer/profile";
option java_package = "com.dogu.protocol.generated.outer.profile";

enum ProfileMethodKind {
  PROFILE_METHOD_KIND_UNSPECIFIED = 0;

  PROFILE_METHOD_KIND_DESKTOP_CPU = 1;
  PROFILE_METHOD_KIND_DESKTOP_CPUFREQ = 10;
  PROFILE_METHOD_KIND_DESKTOP_GPU = 20;
  PROFILE_METHOD_KIND_DESKTOP_MEM = 30;
  PROFILE_METHOD_KIND_DESKTOP_FS = 40;
  PROFILE_METHOD_KIND_DESKTOP_NET = 50;
  PROFILE_METHOD_KIND_DESKTOP_DISPLAY = 60;

  PROFILE_METHOD_KIND_ANDROID_CPU_SHELLTOP = 1001;
  PROFILE_METHOD_KIND_ANDROID_CPUFREQ_CAT = 1010;
  PROFILE_METHOD_KIND_ANDROID_GPU_NOTYET = 1020;
  PROFILE_METHOD_KIND_ANDROID_MEM_ACTIVITYMANAGER = 1030;
  PROFILE_METHOD_KIND_ANDROID_MEM_PROCMEMINFO = 1031;
  PROFILE_METHOD_KIND_ANDROID_FS_PROCDISKSTATS = 1040;
  PROFILE_METHOD_KIND_ANDROID_NET_TRAFFICSTATS = 1050;
  PROFILE_METHOD_KIND_ANDROID_DISPLAY = 1060;
  PROFILE_METHOD_KIND_ANDROID_PROCESS_SHELLTOP = 1070;

  PROFILE_METHOD_KIND_IOS_CPU_LOAD_INFO = 2001;
  PROFILE_METHOD_KIND_IOS_MEM_VM_STATISTICS = 2030;
  PROFILE_METHOD_KIND_IOS_DISPLAY = 2060;
}

message ProfileMethod {
  ProfileMethodKind kind = 1;
  string name = 2;
}

message ProfileMethodWithConfig {
  ProfileMethod profile_method = 1;
  fixed32 period_sec = 2;
}

message DeviceConfig {
  repeated ProfileMethodWithConfig profile_methods = 1;
}
